--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover"
     />
-    <title>自助功能</title>
+    <title>天顺陈姐</title>
+    <script>
+      const version = "v2025070101"; // 每次更新时修改版本号
+      document.write(`<script src="/js/chunk-vendors.js?${version}"><\/script>`);
+      document.write(`<script src="/js/app.js?${version}"><\/script>`);
+    </script>
   </head>
   <body>
     <div id="app"></div>
